Pull request #31: Release
Merge in RIHA/riha-storage from release to master

Squashed commit of the following:

commit 987f38dc8a3473c852a01b202d2527907c64014d
Author: Kristjan Kruus <kristjan.kruus@ria.ee>
Date:   Tue Mar 15 10:48:54 2022 +0200

    project version up

commit 5960417002141ec7aa97ab2240bd13671621ea84
Merge: fe447e3 f695f3f
Author: Kristjan Kruus <kristjan.kruus@ria.ee>
Date:   Wed Feb 2 09:41:27 2022 +0200

    Pull request #30: Develop

    Merge in RIHA/riha-storage from develop to release

    * commit 'f695f3f99225d3629b31848aff3d45ffd08eaf13':
      Restored session.flush method
      Added property to persistence-context.xml
      Deleted session.flush method
      Added script to liquibase

commit f695f3f99225d3629b31848aff3d45ffd08eaf13
Merge: b1fbf2c bcd830d
Author: Makar Šokarev <makar.shokarev@wisercat.eu>
Date:   Tue Feb 1 16:41:50 2022 +0200

    Pull request #29: RIHAKB-1092

    Merge in RIHA/riha-storage from RIHAKB-1092 to develop

    * commit 'bcd830df977a3a58e376a1c3e7db0afbffde6983':
      Restored session.flush method
      Added property to persistence-context.xml
      Deleted session.flush method

commit bcd830df977a3a58e376a1c3e7db0afbffde6983
Author: Makar Sokarev <makar.shokarev@wisercat.net>
Date:   Tue Feb 1 16:35:56 2022 +0200

    Restored session.flush method

commit 0daf52e015e773e08c752b3204c12c6da4e7d40e
Author: Makar Sokarev <makar.shokarev@wisercat.net>
Date:   Tue Feb 1 16:16:00 2022 +0200

    Added property to persistence-context.xml

commit 26127edd7cfc8879b82f4bba07d0e5b6cd5683fd
Author: Makar Sokarev <makar.shokarev@wisercat.net>
Date:   Tue Feb 1 16:06:40 2022 +0200

    Deleted session.flush method

commit b1fbf2c148bb44f6e51aed7c0d1d0834e1249c1b
Merge: e41a3f6 664dfde
Author: Makar Šokarev <makar.shokarev@wisercat.eu>
Date:   Tue Feb 1 15:47:33 2022 +0200

    Pull request #28: Added script to liquibase

    Merge in RIHA/riha-storage from RIHAKB-1092 to develop

    * commit '664dfde95dc099503ef02bfda9